--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 		<meta property="og:title" content="UNIT ONE Pro - The Ultimate Enclosed Home Gym | Unit Strength" />
 		<meta property="og:description" content="Transform your home with the UNIT ONE Pro - the ultimate enclosed home gym. Premium fitness equipment designed for maximum results in minimal space." />
 		<meta property="og:type" content="website" />
-		<meta property="og:image" content="/UNIT-Strength-logo.png" />
+		<meta property="og:url" content="https://unitstrength.com.au/" />
+		<meta property="og:site_name" content="UNIT Strength" />
+		<meta property="og:image" content="https://unitstrength.com.au/UNIT-Strength-logo.png?v=2" />
 		<meta property="og:image:type" content="image/png" />
 		<meta property="og:image:alt" content="UNIT Strength logo" />
 
@@ -20,7 +22,7 @@
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:title" content="UNIT ONE Pro - The Ultimate Enclosed Home Gym | Unit Strength" />
 		<meta name="twitter:description" content="Transform your home with the UNIT ONE Pro - the ultimate enclosed home gym. Premium fitness equipment designed for maximum results in minimal space." />
-		<meta name="twitter:image" content="/UNIT-Strength-logo.png" />
+		<meta name="twitter:image" content="https://unitstrength.com.au/UNIT-Strength-logo.png?v=2" />
 	</head>
 	<body>
 		<div id="root"></div>
