--- a/index.html
+++ b/index.html
@@ -37,12 +37,14 @@
 		fbq('init', '1157568912480182');
 		fbq('track', 'PageView');
 		</script>
-		<noscript><img height="1" width="1" style="display:none"
-		src="https://www.facebook.com/tr?id=1157568912480182&ev=PageView&noscript=1"
-		/></noscript>
 		<!-- End Meta Pixel Code -->
 	</head>
 	<body>
+		<!-- Meta Pixel Noscript -->
+		<noscript><img height="1" width="1" style="display:none"
+		src="https://www.facebook.com/tr?id=1157568912480182&ev=PageView&noscript=1"
+		/></noscript>
+		<!-- End Meta Pixel Noscript -->
 		<div id="root"></div>
 		<script type="module" src="/src/main.jsx"></script>
 	</body>
